Latest version of scope locals